RESOLVED FIXED180504
-[WKWebViewConfiguration copyWithZone] doesn't copy _groupIdentifier
https://bugs.webkit.org/show_bug.cgi?id=180504
Summary -[WKWebViewConfiguration copyWithZone] doesn't copy _groupIdentifier
Jeff Miller
Reported 2017-12-06 14:03:05 PST
-[WKWebViewConfiguration copyWithZone] doesn't copy the _groupIdentifier string, which means WKWebView's created with a copy of the configuration won't have a page group. For example, this is done during UIDelegate::UIClient::createNewPage().
Attachments
Patch (3.01 KB, patch)
2017-12-06 14:38 PST, Jeff Miller
ggaren: review+
Radar WebKit Bug Importer
Comment 1 2017-12-06 14:03:47 PST
Jeff Miller
Comment 2 2017-12-06 14:38:45 PST
Geoffrey Garen
Comment 3 2017-12-06 14:41:02 PST
Comment on attachment 328633 [details] Patch r=me
Jeff Miller
Comment 4 2017-12-06 16:19:35 PST
Note You need to log in before you can comment on or make changes to this bug.