-[WKWebViewConfiguration copyWithZone] doesn't copy _groupIdentifier https://bugs.webkit.org/show_bug.cgi?id=180504

Reviewed by Geoffrey Garen.

Source/WebKit:

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration copyWithZone:]):
Copy _groupIdentifier.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKWebViewConfiguration.mm:
Add a test to verify that the _groupIdentifier is copied.

Canonical link: https://commits.webkit.org/196429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225603 268f45cc-cd09-0410-ab3c-d52691b4dbfc