Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewConfiguration.mm
@@ -66,4 +66,13 @@ TEST(WebKit, InvalidConfiguration)
 #pragma clang diagnostic pop
 }
 
+TEST(WebKit, ConfigurationGroupIdentifierIsCopied)
+{
+    auto configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
+    [configuration _setGroupIdentifier:@"TestGroupIdentifier"];
+
+    auto configuationCopy = adoptNS([configuration copy]);
+    EXPECT_STREQ([configuration _groupIdentifier].UTF8String, [configuationCopy _groupIdentifier].UTF8String);
+}
+
 #endif // WK_API_ENABLED
